--- a/package.json
+++ b/package.json
@@ -16,15 +16,17 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/razoyo/elm-frontend-only#readme",
   "devDependencies": {
+    "bulma": "^0.9.3",
     "css-loader": "^6.2.0",
     "elm": "^0.19.1-5",
     "elm-webpack-loader": "^8.0.0",
     "html-webpack-plugin": "^5.3.2",
+    "materialize-css": "^1.0.0-rc.2",
     "sass": "^1.38.0",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.2.1",
     "webpack": "^5.50.0",
     "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^4.2.1"
   }
 }
